<resources>
    <string name="app_name">喵了水滴</string>
    <string name="for_essential_ph1">--For Essential PH1</string>
    <string name="permission_tips">模拟水滴屏需要开启无障碍服务，请打开无障碍服务以使App正常运行。</string>
    <string name="tips">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="no_permission_tips">未开启无障碍服务，App无法正常运行。</string>
    <string name="app_desc">软件说明</string>
    <string name="app_desc_rule1">1. 本软件仅通过官方ROM045版本测试，不保证其他任何型号或任何ROM均可生效。</string>
    <string name="app_desc_rule2">2. 本软件通过无障碍服务附带的悬浮窗权限，在摄像头下方覆盖水滴状填充层达到伪水滴效果。</string>
    <string name="app_desc_rule3">3. 无障碍服务权限级别较高，目前通知栏以及锁屏界面均可正常显示。</string>
    <string name="app_desc_rule4">4. 本软件理论上持续有效，无需后台运行。</string>
    <string name="app_name_en">Water Drop</string>
    <string name="app_desc_rule5">5. 开启水滴模式会影响截图效果，但可能引起极度舒适。</string>
    <string name="accessibility_info">为了获取更高权限的悬浮窗口，以使水滴模拟覆盖在通知栏上方以及锁屏界面，请开启本服务。</string>
    <string name="waterdrop_switch_tips">请通过打开/关闭无障碍服务控制是否开启水滴模拟</string>
</resources>
